# AssetVeil

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_jp.md
cli/: main.cpp
include/assetveil/: assetveil.hpp
src/: assetveil.cpp
tests/: roundtrip.cpp
